# Corporate-Security-AI-Agent-

./: .gitignore  README.md  generate_graph.py  init_corporate_kb.py  pyproject.toml  requirements.txt  security_vault.db
Agents/: correlator.py  guardrails.py  planner.py  retriever.py  scorer.py
Data/: auth_logs.json  browser_logs.json  email_logs.json  file_logs.json  generate_logs.py  hr_logs.json  slack_logs.json  usb_logs.json
Frontend/: app.py
Graph/: workflow.py
Memory/: corporate_security_agent.db  ingest_custom.py  query.py
api/: main.py
reports/: report_generator.py
