[project]
name = "dfir-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "cognee[fastembed]>=1.2.2",
    "faker>=40.23.0",
    "fastapi>=0.138.0",
    "google-genai>=2.10.0",
    "google-generativeai>=0.8.6",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.20.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "langsmith>=0.9.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "streamlit>=1.58.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
